<?xml version="1.0"?>

<package format="2">
  <name>laser_plane_merger</name>
  <version>0.0.1</version>
  <description>Merge multiple LaserScans projecting them onto a single plane</description>
  
  <author email="jaroslaw.karwowski.dokt@pw.edu.pl">Jarosław Karwowski</author>
  
  <maintainer email="jaroslaw.karwowski.dokt@pw.edu.pl">Jarosław Karwowski</maintainer>
  
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
</package>
